--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -1,2 +1,33 @@
 <h1>Schools#new</h1>
 <p>Find me in app/views/schools/new.html.erb</p>
+
+<%= form_for @school do |f| %>
+    <div class="form">
+        <div class="form-item mb-3">
+            <%= f.label :name %>
+            <%= f.text_field :name, class: 'form-control' %>
+        </div>
+        <div class="form-item mb-3">
+            <%= f.label :address %>
+            <%= f.text_field :address, class: 'form-control' %>
+        </div>
+        <div class="form-item mb-3">
+            <%= f.label :principal %>
+            <%= f.text_field :principal, class: 'form-control' %>
+        </div>
+        <div class="form-item mb-3">
+            <%= f.label :capacity %>
+            <%= f.text_field :capacity, class: 'form-control' %>
+        </div>
+        <div class="form-item mb-3">
+            <%= f.label :private_school %>
+            <%= f.check_box :private_school, class: 'form-control' %>
+        </div>
+        
+        <div class="form-item mb-3">
+            <%= f.submit%>
+        </div>
+  </div>
+<% end %>
+
+<%= link_to 'Back', root_path %>
